streamlined, added runnable jar